[package]
name = "rmafia"
version = "0.1.0"
authors = ["hamid <hamidr.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#getset = "0.1.0"
nanoid = "0.4.0"
rand = "0.8.4"
# futures = "0.3.16"
ringbuf = "0.2.6"
bimap = "0.6.1"
serde_json = "1.0"